# pi-rs-gui

./: CLAUDE.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/superpowers/plans/: 2026-07-11-composer-folder-picker.md  2026-07-11-context-menu-redesign.md
docs/superpowers/specs/: 2026-07-11-composer-folder-picker-design.md  2026-07-11-context-menu-redesign.md
src/: App.tsx  main.tsx  style.css  tauri-adapter.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  state.rs  store.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/state/: composer.rs  cwd.rs  internal.rs  mod.rs  model.rs  notifications.rs  persistence.rs  providers.rs  runtime.rs  session.rs  skills.rs  store.rs  theme.rs  timeline.rs  transcript.rs  types.rs  ui.rs  workspace.rs
src-tauri/src/store/: composer.rs  git.rs  internal.rs  model.rs  notifications.rs  orchestration.rs  persistence.rs  providers.rs  runtime.rs  session.rs  terminal.rs  theme.rs  timeline.rs  workspace.rs  worktree.rs
src/api/: commands.ts  events.ts
src/components/: AppShell.tsx  ChatView.tsx  ConversationSidebar.tsx  ExtensionsView.tsx  ModelsSettings.tsx  PiSidebar.tsx  SettingsView.tsx  SkillsView.tsx  ThinkingBlock.tsx  ToolCallCard.tsx  WorkspaceView.tsx
src/components/ui/: avatar.tsx  button.tsx  card.tsx  checkbox.tsx  command.tsx  dialog.tsx  input-group.tsx  popover.tsx  reasoning.tsx  select.tsx  sheet.tsx  sidebar.tsx
src/contexts/: AppModeContext.tsx
src/hooks/: use-mobile.ts  useChat.ts
src/stores/: threadStore.ts  ui.ts
src/styles/: animations.css  base.css  components.css  theme.css
src/types/: ipc.ts
