[package]
name = "pi-rs-gui"
version = "0.1.0"
description = "A Tauri v2 GUI for pi-coding-agent (Rust)"
authors = ["you"]
edition = "2021"

[lib]
name = "pi_rs_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[patch."https://github.com/oouxx/pi-rs"]
pi-coding-agent = { path = "/Users/wxx/Desktop/github/pi-rs/crates/pi-coding-agent" }
pi-agent-core = { path = "/Users/wxx/Desktop/github/pi-rs/crates/pi-agent-core" }
pi-ai = { path = "/Users/wxx/Desktop/github/pi-rs/crates/pi-ai" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
pi-coding-agent = { git = "https://github.com/oouxx/pi-rs", tag = "v1.78.15"}
pi-agent-core = { git = "https://github.com/oouxx/pi-rs", tag = "v1.78.15"}
pi-ai = { git = "https://github.com/oouxx/pi-rs", tag = "v1.78.15"}
tauri = { version = "2", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
open = "5"
futures = "0.3"
